--- a/app.json
+++ b/app.json
@@ -46,7 +46,10 @@
         {
           "icon": "./assets/images/icon.png",
           "color": "#2196F3",
-          "sounds": [],
+          "sounds": [
+            "./assets/sounds/water_bubble.wav",
+            "./assets/sounds/liquid_bubble.wav"
+          ],
           "defaultChannel": "hydromate-reminders"
         }
       ],
