--- a/app.json
+++ b/app.json
@@ -50,7 +50,7 @@
         {
           "icon": "./assets/images/icon.png",
           "color": "#2196F3",
-          "sounds": ["./assets/sounds/water_bubble.wav", "./assets/sounds/liquid_bubble.wav"],
+          "sounds": ["./assets/sounds/popping_bubble.wav"],
           "defaultChannel": "hydromate-reminders"
         }
       ],
